vlc fails to build with --disable-vlm

Using (on git master):

LDFLAGS="-Wl,-z,defs" ./configure --disable-vlm

I get:

libtool: link:  echo "local: *; };" >> .libs/libvlccore.ver
libtool: link:  gcc -std=gnu99 -shared  .libs/libvlccore_la-libvlc.o .libs/libvlccore_la-libvlc-module.o .libs/libvlccore_la-version.o interface/.libs/libvlccore_la-interface.o interface/.libs/libvlccore_la-intf_eject.o interface/.libs/libvlccore_la-interaction.o playlist/.libs/libvlccore_la-thread.o playlist/.libs/libvlccore_la-control.o playlist/.libs/libvlccore_la-engine.o playlist/.libs/libvlccore_la-sort.o playlist/.libs/libvlccore_la-loadsave.o playlist/.libs/libvlccore_la-tree.o playlist/.libs/libvlccore_la-item.o playlist/.libs/libvlccore_la-search.o playlist/.libs/libvlccore_la-services_discovery.o input/.libs/libvlccore_la-item.o input/.libs/libvlccore_la-access.o input/.libs/libvlccore_la-clock.o input/.libs/libvlccore_la-control.o input/.libs/libvlccore_la-decoder.o input/.libs/libvlccore_la-decoder_synchro.o input/.libs/libvlccore_la-demux.o input/.libs/libvlccore_la-es_out.o input/.libs/libvlccore_la-input.o input/.libs/libvlccore_la-meta.o input/.libs/libvlccore_la-stream.o input/.libs/libvlccore_la-mem_stream.o input/.libs/libvlccore_la-subtitles.o input/.libs/libvlccore_la-var.o video_output/.libs/libvlccore_la-video_output.o video_output/.libs/libvlccore_la-vout_pictures.o video_output/.libs/libvlccore_la-video_text.o video_output/.libs/libvlccore_la-video_widgets.o video_output/.libs/libvlccore_la-vout_subpictures.o video_output/.libs/libvlccore_la-vout_intf.o audio_output/.libs/libvlccore_la-common.o audio_output/.libs/libvlccore_la-dec.o audio_output/.libs/libvlccore_la-filters.o audio_output/.libs/libvlccore_la-input.o audio_output/.libs/libvlccore_la-mixer.o audio_output/.libs/libvlccore_la-output.o audio_output/.libs/libvlccore_la-intf.o osd/.libs/libvlccore_la-osd.o osd/.libs/libvlccore_la-osd_text.o osd/.libs/libvlccore_la-osd_widgets.o network/.libs/libvlccore_la-acl.o network/.libs/libvlccore_la-getaddrinfo.o network/.libs/libvlccore_la-io.o network/.libs/libvlccore_la-tcp.o network/.libs/libvlccore_la-udp.o network/.libs/libvlccore_la-httpd.o network/.libs/libvlccore_la-rootbind.o network/.libs/libvlccore_la-tls.o network/.libs/libvlccore_la-poll.o text/.libs/libvlccore_la-charset.o text/.libs/libvlccore_la-strings.o text/.libs/libvlccore_la-unicode.o text/.libs/libvlccore_la-wincp.o text/.libs/libvlccore_la-iso_lang.o misc/.libs/libvlccore_la-md5.o misc/.libs/libvlccore_la-rand.o misc/.libs/libvlccore_la-mtime.o misc/.libs/libvlccore_la-block.o modules/.libs/libvlccore_la-modules.o modules/.libs/libvlccore_la-cache.o modules/.libs/libvlccore_la-entry.o modules/.libs/libvlccore_la-os.o misc/.libs/libvlccore_la-threads.o misc/.libs/libvlccore_la-stats.o misc/.libs/libvlccore_la-cpu.o misc/.libs/libvlccore_la-action.o config/.libs/libvlccore_la-core.o config/.libs/libvlccore_la-dirs.o config/.libs/libvlccore_la-chain.o config/.libs/libvlccore_la-file.o config/.libs/libvlccore_la-intf.o config/.libs/libvlccore_la-cmdline.o misc/.libs/libvlccore_la-events.o misc/.libs/libvlccore_la-image.o misc/.libs/libvlccore_la-messages.o misc/.libs/libvlccore_la-objects.o misc/.libs/libvlccore_la-variables.o misc/.libs/libvlccore_la-error.o misc/.libs/libvlccore_la-update.o misc/.libs/libvlccore_la-xml.o misc/.libs/libvlccore_la-devices.o extras/.libs/libvlccore_la-libc.o misc/.libs/libvlccore_la-filter_chain.o misc/.libs/libvlccore_la-linux_specific.o stream_output/.libs/libvlccore_la-stream_output.o stream_output/.libs/libvlccore_la-announce.o stream_output/.libs/libvlccore_la-sap.o stream_output/.libs/libvlccore_la-sdp.o misc/.libs/libvlccore_la-revision.o   /usr/lib64/libhal.so -L/usr/lib64 /usr/lib64/libdbus-1.so -lrt -lpthread -ldl -lm  -mtune=athlon64 -Wl,-z -Wl,defs   -Wl,-soname -Wl,libvlccore.so.0 -Wl,-version-script -Wl,.libs/libvlccore.ver -o .libs/libvlccore.so.0.0.1
.libs/libvlccore_la-libvlc.o: In function `libvlc_InternalCleanup':
libvlc.c:(.text+0x18e7): undefined reference to `vlm_Delete'
.libs/libvlccore_la-libvlc.o: In function `libvlc_InternalInit':
libvlc.c:(.text+0x3a0c): undefined reference to `__vlm_New'
collect2: ld returned 1 exit status
make[1]: *** [libvlccore.la] Error 1

Not using -z defs just postpones the failure:

libtool: link: gcc -std=gnu99 -Wall -Wextra -Wsign-compare -Wundef -Wpointer-arith -Wbad-function-cast -Wcast-align -Wwrite-strings -Wmissing-prototypes -Wvolatile-register-var -o vlc vlc-vlc.o  ./.libs/libvlc.so /home/alexis/gentoo_workdir/vlc/vlc-git/vlc/src/.libs/libvlccore.so ./.libs/libvlccore.so /usr/lib64/libhal.so /usr/lib64/libdbus-1.so -lrt -lpthread -ldl -lm -Wl,-rpath -Wl,/home/alexis/gentoo_workdir/vlc/vlc-git/vlc/src/.libs
/home/alexis/gentoo_workdir/vlc/vlc-git/vlc/src/.libs/libvlccore.so: undefined reference to `__vlm_New'
/home/alexis/gentoo_workdir/vlc/vlc-git/vlc/src/.libs/libvlccore.so: undefined reference to `vlm_Delete'
collect2: ld returned 1 exit status
make[3]: *** [vlc] Error 1