Fix building when VLM is disable

Closes #1718